# FastAPI-default

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  const.py
app/abc/client/: auth.py  jwt.py
app/abc/repository/: __init__.py  base.py  user.py
app/adapter/client/: auth_client.py  jwt_decoder.py  jwt_encoder.py
app/adapter/repository/cache/: __init__.py  _base.py  _uow.py  user.py
app/adapter/repository/rdb/: __init__.py  _base.py  _uow.py  user.py
app/adapter/repository/rdb/entities/: __init__.py  _base.py  contact.py  user.py
app/api/: __init__.py
app/api/user/: __init__.py  endpoint.py
app/api/user/schema/: reqest.py  response.py
app/common/enums/: user_status.py
app/config/: __init__.py  app.py  cache.py  cors.py  environment.py  jwt.py  rdb.py
app/core/: exception.py
app/core/enums/: __init__.py  environment.py  role.py
app/core/service/: __init__.py  _base_.py
app/core/service/user/: __init__.py  add_user.py  check_user.py  delete_cache.py  get_info.py  sign_in.py
app/security/: auth.py  cors.py  crypt.py
