[project]
name = "fastapi-default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
